--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,24 @@
 body {
+  background-image:url(https://th.bing.com/th/id/R.579edccf5e66a89cd6bf613c3e986ba6?rik=2IuQKnuRStLepA&riu=http%3a%2f%2fwww.purrfectcatbreeds.com%2fwp-content%2fuploads%2f2020%2f04%2fpurrfectcatbreeds.jpg&ehk=Ty8svup%2fhtf07w6cEYBIKRs5QQzGjdPWd%2fVu4sc4EzM%3d&risl=&pid=ImgRaw&r=0);
+  background-size:cover;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
 table {
   width: 100%;
 }
 
 td, th {
-  border: 1px solid #ddd;
+  border: 1px solid #114211;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: #1e471d00;
 }
 
 tr:hover {
@@ -33,6 +29,6 @@ th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
-  background-color: #723d46;
+  background-color: #114211;
   color: white;
 }
